--- a/server/package.json
+++ b/server/package.json
@@ -1,79 +1,70 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": ">=14.0.0 <14.12.0"
-  },
-  "scripts": {
-    "build": "tsc && copyfiles -f ./package.json ./dist && copyfiles -f ./src/robots.txt ./dist",
-    "start-prod": "cross-env NODE_ENV=production node index.js",
-    "start": "cross-env NODE_ENV=development node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon --exec ts-node -- ./src/index.ts",
-    "prod": "npm run build && npm run start",
-    "clean": "rm -rf node_modules coverage dist .nyc_output",
-    "lint": "tslint -t stylish --project \"tsconfig.json\""
-  },
-  "keywords": [],
   "author": "",
-  "license": "MIT",
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
   "dependencies": {
-    "axios": "^0.21.1",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "colors": "^1.4.0",
-    "connect-history-api-fallback": "^1.6.0",
-    "connect-mongo": "^4.4.1",
-    "copyfiles": "^2.4.1",
-    "cors": "^2.8.5",
-    "csurf": "^1.11.0",
-    "dotenv": "^9.0.2",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-ip": "^1.0.4",
-    "express-rate-limit": "^5.2.6",
-    "express-session": "^1.17.1",
-    "express-winston": "^4.1.0",
-    "fancy-log": "^1.3.3",
-    "helmet": "^4.6.0",
-    "http-status": "^1.5.0",
-    "joi": "^17.4.0",
-    "joi-objectid": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-then": "^1.0.1",
-    "lodash": "^4.17.21",
-    "mongoose": "^5.12.9",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.6.0",
-    "open": "^8.0.9",
-    "recaptcha2": "^1.3.3",
-    "redis": "^3.1.2",
-    "underscore": "^1.13.1",
-    "uuid": "^8.3.2",
-    "winston": "^3.3.3",
-    "xss-filters": "^1.2.7"
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.11",
-    "@types/express-session": "^1.17.3",
-    "@types/lodash": "^4.14.169",
-    "@types/node": "^15.3.0",
-    "@types/nodemailer": "^6.4.1",
-    "@types/xss-filters": "0.0.27",
-    "cross-env": "^7.0.3",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-run": "^1.7.1",
-    "gulp-zip": "^5.1.0",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "tslint": "^6.1.2",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.37.0",
-    "webpack-stream": "^6.1.2"
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
